# grid-agent

./: Cargo.toml
src/: agent.rs  environment.rs  main.rs
src/agent/: brain.rs
