[package]
name = "grid-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grid-agent"

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"
rand = "0.8.5"
ndarray = "0.15.4"
num = "0.4.0"
rayon = "1.5.3"
serde = "1.0.137"

